snippets/Nemerle.Statechart/Tests/testsuite/positive/deep_history.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using System.Collections.Generic;
using System.Linq;
using System.Console;
using Nemerle.Statechart;

  /// <summary>
  /// Description of PathCover.
  /// </summary>
  [statechart(
  <#
  flags testing;
  //flags debug;
  
  name "deep history";
  
  state A
  {
    b => B;
    (H*)
  }

  state D : A
  {
    c => G;
  }

  state G : A
  {
    a => D;
  }

  state E : D
  {
    a => F;
  }
      
  state F : D
  {
    a => C;
  }
      
  state B
  {
    a => A.H;
  }

  state C
  {
    a => A;
    b => B;
  }
  #>
  )]
  public class example
  {

  } 

  module Test
  {
    public Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("E", "EntryA", "EntryD", "EntryE");
      tester.Test("a", ["E"], ["F"]);
      tester.Test("b", ["F", "D", "A"], ["B"]);
      tester.Test("a", ["B"], ["A", "D", "F"]);
      tester.Test("c", ["F", "D"], ["G"]);
      tester.Test("a", ["G"], ["D", "E"]);
      tester.Test("a", ["E"], ["F"]);
      tester.Test("a", ["F", "D", "A"], ["C"]);
      tester.Test("b", ["C"], ["B"]);
      tester.Test("a", ["B"], ["A", "D", "F"]);
      tester.Test("a", ["F", "D", "A"], ["C"]);
      tester.Test("a", ["C"], ["A", "D", "E"]);
      tester.Test("b", ["E", "D", "A"], ["B"]);
      tester.Test("a", ["B"], ["A", "D", "E"]);
      fsm.Terminate();
    }
  }
  
/*
BEGIN-OUTPUT
EntryA
EntryD
EntryE
[E]
Ok
Processing a 'a' 
ExitE
EntryF
[F]
Ok
Processing a 'b' 
ExitF
ExitD
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
EntryD
EntryF
[F]
Ok
Processing a 'c' 
ExitF
ExitD
EntryG
[G]
Ok
Processing a 'a' 
ExitG
EntryD
EntryE
[E]
Ok
Processing a 'a' 
ExitE
EntryF
[F]
Ok
Processing a 'a' 
ExitF
ExitD
ExitA
EntryC
[C]
Ok
Processing a 'b' 
ExitC
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
EntryD
EntryF
[F]
Ok
Processing a 'a' 
ExitF
ExitD
ExitA
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryA
EntryD
EntryE
[E]
Ok
Processing a 'b' 
ExitE
ExitD
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryA
EntryD
EntryE
[E]
Ok
END-OUTPUT
*/
