snippets/Nemerle.Statechart/Tests/testsuite/negative/simple_state_history.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Console;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
   name "simple state history";
  
   state A
   {
     (H) // E: Simple state cannot have history "AHistory"
   }
   
   #>)]
  public class example
  { 
  }



